First commit. Basic layout done.

--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,71 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: #d7b81e;
   font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 1rem;
+  border: 3px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header h1 {
+  background-color: #d7871e;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  border: 3px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-content {
+  background-color: #d7b81e;
+  font-size: calc(1px + 2vmin);
+  margin: 1rem;
+  border: 3px solid black;
+}
+
+.App-content-header {
+  background-color: #d7871e;
+  margin: 1rem;
+  border: 3px solid black;
+}
+
+.App-content-header input {
+  background-color: #cecece;
+  margin: 1rem;
+  border: none;
+  border-bottom: 3px solid black;
+  width: 90%;
+}
+
+.App-content-character {
+  background-color: #d7871e;
+  margin: 1rem;
+  border: 3px solid black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.App-content-character div {
+  background-color: #d7591e;
+  margin: 1rem;
+  border: 3px solid black;
+}
+
+.App-content-character-pic {
+  height: 300px;
+  width: 300px;
+}
+
+.App-content-character-info {
+  height: 500px;
+  width: 300px;
+}
+
+.App-content-navigation {
+  background-color: #d7871e;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-right: 50rem;
+  margin-left: 50rem;
+  border: 3px solid black;
 }
