--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,11 @@
   width: 300px;
 }
 
+.App-content-character-pic img {
+  width: 100%;
+  height: 100%;
+}
+
 .App-content-character-info {
   height: 45vh;
   width: 300px;
