CSS needs refactoring. Added a few more stats

--- a/src/App.css
+++ b/src/App.css
@@ -50,17 +50,33 @@
 
 .App-content-character-pic {
   height: 25vh;
-  width: 300px;
+  display: flex;
+  justify-content: center;
 }
 
 .App-content-character-pic img {
-  width: 100%;
-  height: 100%;
+  display: flex;
 }
 
 .App-content-character-info {
   height: 45vh;
   width: 300px;
+}
+
+.App-content-character-info table {
+  width: 10%;
+  flex-wrap: wrap;
+}
+
+.App-content-character-info th {
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.App-content-character-info td {
+  border: 1px solid black;
+  padding: 5px;
+  text-transform: capitalize;
 }
 
 .App-content-navigation {
