Layout CSS messings

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,12 @@
-.App {
+@import url("http://fonts.cdnfonts.com/css/pokemon-solid");
+
+.container {
   text-align: center;
   text-transform: capitalize;
+  height: 100%;
 }
 
-.App-header {
-  background-color: #d7b81e;
-  margin: 1rem;
-  border: 3px solid black;
-  border-radius: 5px;
-}
-
-.App-content {
+.app {
   background-color: #d7b81e;
   font-size: calc(1px + 2vmin);
   margin: 1rem;
@@ -19,14 +15,20 @@
   height: calc(100vh - 38px);
 }
 
-.App-content-header {
+.app > header {
+  font-family: "Pokemon Solid", sans-serif;
+  font-size: 2rem;
+  margin: auto;
+}
+
+.input {
   background-color: #d7871e;
   margin: 1rem;
   border: 3px solid black;
   border-radius: 5px;
 }
 
-.App-content-header input {
+.input input {
   background-color: #cecece;
   margin: 1rem;
   border: none;
@@ -34,16 +36,15 @@
   width: 90%;
 }
 
-.App-content-character {
+.character {
   background-color: #d7871e;
   margin: 1rem;
   border: 3px solid black;
   display: flex;
-  justify-content: space-around;
   border-radius: 5px;
 }
 
-.App-content-character > * {
+.character > * {
   background-color: #d7591e;
   margin: 1rem;
   border: 3px solid black;
@@ -51,47 +52,38 @@
   width: 100%;
 }
 
-.App-content-character-pic {
-  height: 25vh;
+.character-pic {
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
-.App-content-character-pic img {
+.character-pic img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.character-data {
   display: flex;
+
+  align-items: center;
+  justify-content: center;
 }
 
-.App-content-character-info table {
-  border-collapse: collapse;
-  margin: 0 auto;
-  width: 10%;
-  flex-wrap: wrap;
+#character-data-table {
+  font-size: 100%;
 }
 
-.App-content-character-info th {
-  border-bottom: 3px solid black;
-  padding: 10px;
-  font-size: 13px;
+#tenList {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 50%;
 }
 
-.App-content-character-info td {
-  padding: 5px;
-  font-size: 13px;
-}
-
-.App-content-navigation {
+.navigation {
   background-color: #d7871e;
   margin: 1rem;
   border: 3px solid black;
   border-radius: 5px;
-}
-
-#tenList {
-  margin: auto;
-  border-collapse: collapse;
-}
-
-#tenList th {
-  padding: 5px;
-  border-bottom: 3px solid black;
 }
