--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
 @import url("http://fonts.cdnfonts.com/css/pokemon-solid");
-
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  background-color: rgb(200, 61, 40);
+}
 .container {
+  /* margin-left: 25%;
+  margin-right: 25%; */
   text-align: center;
   text-transform: capitalize;
   height: 100%;
 }
-
 .app {
   background-color: #d7b81e;
   font-size: calc(1px + 2vmin);
@@ -14,20 +21,17 @@
   border-radius: 5px;
   height: calc(100vh - 38px);
 }
-
 .app > header {
   font-family: "Pokemon Solid", sans-serif;
   font-size: 2rem;
   margin: auto;
 }
-
 .input {
   background-color: #d7871e;
   margin: 1rem;
   border: 3px solid black;
   border-radius: 5px;
 }
-
 .input input {
   background-color: #cecece;
   margin: 1rem;
@@ -35,7 +39,6 @@
   border-bottom: 3px solid black;
   width: 90%;
 }
-
 .character {
   background-color: #d7871e;
   margin: 1rem;
@@ -43,7 +46,6 @@
   display: flex;
   border-radius: 5px;
 }
-
 .character > * {
   background-color: #d7591e;
   margin: 1rem;
@@ -51,36 +53,29 @@
   border-radius: 5px;
   width: 100%;
 }
-
 .character-pic {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .character-pic img {
   max-width: 100%;
   max-height: 100%;
 }
-
 .character-data {
   display: flex;
-
   align-items: center;
   justify-content: center;
 }
-
 #character-data-table {
   font-size: 100%;
 }
-
 #tenList {
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 50%;
 }
-
 .navigation {
   background-color: #d7871e;
   margin: 1rem;
