--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,10 @@ body {
     sans-serif;
   background-color: rgb(200, 61, 40);
 }
-.container {
-  /* margin-left: 25%;
-  margin-right: 25%; */
-  text-align: center;
-  text-transform: capitalize;
-  height: 100%;
+header {
+  font-family: "Pokemon Solid", sans-serif;
+  font-size: 2rem;
+  width: 100%;
 }
 .app {
   background-color: #d7b81e;
@@ -20,24 +18,6 @@ body {
   border: 3px solid black;
   border-radius: 5px;
   height: calc(100vh - 38px);
-}
-.app > header {
-  font-family: "Pokemon Solid", sans-serif;
-  font-size: 2rem;
-  margin: auto;
-}
-.input {
-  background-color: #d7871e;
-  margin: 1rem;
-  border: 3px solid black;
-  border-radius: 5px;
-}
-.input input {
-  background-color: #cecece;
-  margin: 1rem;
-  border: none;
-  border-bottom: 3px solid black;
-  width: 90%;
 }
 .character {
   background-color: #d7871e;
@@ -53,6 +33,11 @@ body {
   border-radius: 5px;
   width: 100%;
 }
+.character-data {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .character-pic {
   display: flex;
   align-items: center;
@@ -62,10 +47,48 @@ body {
   max-width: 100%;
   max-height: 100%;
 }
-.character-data {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.container {
+  /* margin-left: 25%;
+  margin-right: 25%; */
+  text-align: center;
+  text-transform: capitalize;
+  height: 100%;
+}
+.dot {
+  position: absolute;
+  height: 1.75em;
+  width: 1.75em;
+  border-radius: 50%;
+  background-color: #0e55a6;
+  top: 40px;
+  left: 45px;
+  border: 3px solid white;
+  box-shadow: 5px 2px 1px #333;
+}
+.input {
+  background-color: #d7871e;
+  margin: 1rem;
+  border: 3px solid black;
+  border-radius: 5px;
+}
+.input input {
+  background-color: #cecece;
+  margin: 1rem;
+  border: none;
+  border-bottom: 3px solid black;
+  width: 90%;
+}
+.navigation {
+  background-color: #d7871e;
+  margin: 1rem;
+  border: 3px solid black;
+  border-radius: 5px;
+}
+.volume {
+  position: absolute;
+  font-size: 1.5rem;
+  top: 0px;
+  right: 35px;
 }
 #character-data-table {
   font-size: 100%;
@@ -75,10 +98,4 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 50%;
-}
-.navigation {
-  background-color: #d7871e;
-  margin: 1rem;
-  border: 3px solid black;
-  border-radius: 5px;
 }
