--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 @import url("http://fonts.cdnfonts.com/css/pokemon-solid");
+:root {
+  --volIconHeight: 20px;
+  --volIconWidth: 30px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,6 +15,32 @@ header {
   font-size: 2rem;
   width: 100%;
 }
+header input {
+  appearance: none;
+  height: var(--volIconHeight);
+  width: var(--volIconWidth);
+  background: url("assets/unmute.png");
+  background-repeat: no-repeat;
+  background-size: var(--volIconWidth) var(--volIconHeight);
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  cursor: pointer;
+  outline: none;
+}
+header input:checked {
+  appearance: none;
+  height: var(--volIconHeight);
+  width: var(--volIconWidth);
+  background: url("assets/mute.png");
+  background-repeat: no-repeat;
+  background-size: var(--volIconWidth) var(--volIconHeight);
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  cursor: pointer;
+  outline: none;
+}
 .app {
   background-color: #d7b81e;
   font-size: calc(1px + 2vmin);
@@ -18,6 +48,7 @@ header {
   border: 3px solid black;
   border-radius: 5px;
   height: calc(100vh - 38px);
+  overflow: auto;
 }
 .character {
   background-color: #d7871e;
@@ -54,7 +85,7 @@ header {
   text-transform: capitalize;
   height: 100%;
 }
-.dot {
+.light {
   position: absolute;
   height: 1.75em;
   width: 1.75em;
