--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("http://fonts.cdnfonts.com/css/pokemon-solid");
 :root {
   --volIconHeight: 20px;
-  --volIconWidth: 30px;
+  --volIconWidth: 25px;
 }
 body {
   margin: 0;
@@ -24,7 +24,7 @@ header input {
   background-size: var(--volIconWidth) var(--volIconHeight);
   position: absolute;
   top: 30px;
-  right: 40px;
+  right: 30px;
   cursor: pointer;
   outline: none;
 }
@@ -37,7 +37,7 @@ header input:checked {
   background-size: var(--volIconWidth) var(--volIconHeight);
   position: absolute;
   top: 30px;
-  right: 40px;
+  right: 30px;
   cursor: pointer;
   outline: none;
 }
@@ -48,7 +48,7 @@ header input:checked {
   border: 3px solid black;
   border-radius: 5px;
   height: calc(100vh - 38px);
-  overflow: auto;
+  overflow: hidden;
 }
 .character {
   background-color: #d7871e;
