--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
   --volIconWidth: 25px;
 }
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -14,41 +13,20 @@ header {
   font-family: "Pokemon Solid", sans-serif;
   font-size: 2rem;
   width: 100%;
-}
-header input {
-  appearance: none;
-  height: var(--volIconHeight);
-  width: var(--volIconWidth);
-  background: url("assets/unmute.png");
-  background-repeat: no-repeat;
-  background-size: var(--volIconWidth) var(--volIconHeight);
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  cursor: pointer;
-  outline: none;
-}
-header input:checked {
-  appearance: none;
-  height: var(--volIconHeight);
-  width: var(--volIconWidth);
-  background: url("assets/mute.png");
-  background-repeat: no-repeat;
-  background-size: var(--volIconWidth) var(--volIconHeight);
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  cursor: pointer;
-  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .app {
   background-color: #d7b81e;
   font-size: calc(1px + 2vmin);
-  margin: 1rem;
   border: 3px solid black;
   border-radius: 5px;
   height: calc(100vh - 38px);
   overflow: hidden;
+  margin: auto;
+
+  max-width: 60vw;
 }
 .character {
   background-color: #d7871e;
@@ -86,15 +64,15 @@ header input:checked {
   height: 100%;
 }
 .light {
-  position: absolute;
+  float: left;
   height: 1.75em;
   width: 1.75em;
   border-radius: 50%;
   background-color: #0e55a6;
-  top: 40px;
-  left: 45px;
   border: 3px solid white;
   box-shadow: 5px 2px 1px #333;
+  margin-top: 25px;
+  margin-left: 25px;
 }
 .input {
   background-color: #d7871e;
@@ -116,10 +94,26 @@ header input:checked {
   border-radius: 5px;
 }
 .volume {
-  position: absolute;
-  font-size: 1.5rem;
-  top: 0px;
-  right: 35px;
+  appearance: none;
+  height: var(--volIconHeight);
+  width: var(--volIconWidth);
+  background: url("assets/unmute.png");
+  background-repeat: no-repeat;
+  background-size: var(--volIconWidth) var(--volIconHeight);
+  cursor: pointer;
+  outline: none;
+  margin-top: 15px;
+  margin-right: 15px;
+}
+.volume:checked {
+  appearance: none;
+  height: var(--volIconHeight);
+  width: var(--volIconWidth);
+  background: url("assets/mute.png");
+  background-repeat: no-repeat;
+  background-size: var(--volIconWidth) var(--volIconHeight);
+  cursor: pointer;
+  outline: none;
 }
 #character-data-table {
   font-size: 100%;
