--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,23 @@
 @import url("http://fonts.cdnfonts.com/css/pokemon-solid");
+
 :root {
   --volIconHeight: 20px;
   --volIconWidth: 25px;
 }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  background-color: rgb(200, 61, 40);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-image: url("assets/grass.jpg");
+  background-repeat: repeat;
 }
+
 header {
   font-family: "Pokemon Solid", sans-serif;
   font-size: 2rem;
@@ -17,56 +26,76 @@ header {
   align-items: center;
   justify-content: space-between;
 }
-.app {
-  background-color: #d7b81e;
-  font-size: calc(1px + 2vmin);
-  border: 3px solid black;
-  border-radius: 5px;
-  height: calc(100vh - 38px);
-  overflow: hidden;
-  margin: auto;
 
-  max-width: 60vw;
+.app {
+  background-color: #af4458;
+  font-size: calc(1px + 2vmin);
+  border: 10px solid black;
+  border-radius: 15px;
+  max-height: calc(100vh - 22px);
+  overflow: auto;
+  margin: 1rem;
+  max-width: 500px;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.5), 0 0 20px rgba(0, 0, 0, 0.5),
+    0 0 100px rgba(0, 0, 0, 0.5);
 }
+
 .character {
-  background-color: #d7871e;
+  background-color: #f6e9d9;
   margin: 1rem;
   border: 3px solid black;
   display: flex;
-  border-radius: 5px;
+  flex-direction: column;
+  border-radius: 15px;
 }
-.character > * {
-  background-color: #d7591e;
+
+.character-pic {
+  border: 5px solid #000000;
+  border-radius: 15px;
   margin: 1rem;
-  border: 3px solid black;
-  border-radius: 5px;
-  width: 100%;
+  background-color: #2c2c2c;
+  background-image: url("https://www.transparenttextures.com/patterns/wavecut.png");
+  background-size: 100% 100%;
+  animation: wave 5s linear infinite alternate;
 }
+
+@keyframes wave {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 0 -100px;
+  }
+}
+
+.character-pic img {
+  width: 50%;
+}
+
+#character-data-table {
+  border: 5px solid #000000;
+  border-radius: 15px;
+  margin: 1rem;
+  padding: 0.35rem;
+  background-color: #cecece;
+  margin-top: 0px;
+}
+
 .character-data {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.character-pic {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.character-pic img {
-  max-width: 100%;
-  max-height: 100%;
-}
+
 .container {
-  /* margin-left: 25%;
-  margin-right: 25%; */
   text-align: center;
   text-transform: capitalize;
   height: 100%;
 }
+
 .light {
-  float: left;
-  height: 1.75em;
-  width: 1.75em;
+  height: 1.5em;
+  width: 1.5em;
   border-radius: 50%;
   background-color: #0e55a6;
   border: 3px solid white;
@@ -74,25 +103,29 @@ header {
   margin-top: 25px;
   margin-left: 25px;
 }
+
 .input {
-  background-color: #d7871e;
+  background-color: #f6e9d9;
   margin: 1rem;
   border: 3px solid black;
-  border-radius: 5px;
+  border-radius: 15px;
 }
+
 .input input {
   background-color: #cecece;
+  border-radius: 15px;
   margin: 1rem;
-  border: none;
-  border-bottom: 3px solid black;
+  border: solid 3px black;
   width: 90%;
 }
+
 .navigation {
-  background-color: #d7871e;
+  background-color: #000000;
   margin: 1rem;
   border: 3px solid black;
-  border-radius: 5px;
+  border-radius: 15px;
 }
+
 .volume {
   appearance: none;
   height: var(--volIconHeight);
@@ -102,9 +135,10 @@ header {
   background-size: var(--volIconWidth) var(--volIconHeight);
   cursor: pointer;
   outline: none;
-  margin-top: 15px;
-  margin-right: 15px;
+  margin-top: 25px;
+  margin-right: 25px;
 }
+
 .volume:checked {
   appearance: none;
   height: var(--volIconHeight);
@@ -115,12 +149,29 @@ header {
   cursor: pointer;
   outline: none;
 }
-#character-data-table {
-  font-size: 100%;
-}
+
 #tenList {
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 50%;
+}
+
+#input {
+  margin-bottom: 0px;
+}
+
+form button {
+  margin: 5px;
+  background-color: #efcc2e;
+  border-radius: 15px;
+  border: solid 3px black;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+#title {
+  margin-top: 20px;
+  margin-right: 24px;
+  width: 160px;
 }
