--- a/src/App.css
+++ b/src/App.css
@@ -28,25 +28,27 @@ header {
 }
 
 .app {
-  background-color: #af4458;
+  background-color: #bb2944;
   font-size: calc(1px + 2vmin);
   border: 10px solid black;
   border-radius: 15px;
   max-height: calc(100vh - 22px);
   overflow: auto;
   margin: 1rem;
-  max-width: 500px;
+  max-width: 6000px;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.5), 0 0 20px rgba(0, 0, 0, 0.5),
-    0 0 100px rgba(0, 0, 0, 0.5);
+    0 0 100px rgba(0, 0, 0, 0.5), 0 0 100px rgba(0, 0, 0, 0.5);
 }
 
 .character {
   background-color: #f6e9d9;
   margin: 1rem;
-  border: 3px solid black;
+  border: 5px solid black;
   display: flex;
   flex-direction: column;
   border-radius: 15px;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 1px #333;
 }
 
 .character-pic {
@@ -54,9 +56,10 @@ header {
   border-radius: 15px;
   margin: 1rem;
   background-color: #2c2c2c;
-  background-image: url("https://www.transparenttextures.com/patterns/wavecut.png");
-  background-size: 100% 100%;
-  animation: wave 5s linear infinite alternate;
+  background-image: url("assets/holo4.jpg");
+  background-size: 1600px;
+  box-shadow: 2px 2px 1px #333;
+  animation: wave 55s linear infinite alternate;
 }
 
 @keyframes wave {
@@ -64,7 +67,7 @@ header {
     background-position: 0 0;
   }
   100% {
-    background-position: 0 -100px;
+    background-position: 800px -800px;
   }
 }
 
@@ -79,6 +82,8 @@ header {
   padding: 0.35rem;
   background-color: #cecece;
   margin-top: 0px;
+  box-shadow: 2px 2px 1px #333;
+  width: 100%;
 }
 
 .character-data {
@@ -107,16 +112,25 @@ header {
 .input {
   background-color: #f6e9d9;
   margin: 1rem;
-  border: 3px solid black;
+  border: 5px solid black;
   border-radius: 15px;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 1px #333;
 }
 
 .input input {
   background-color: #cecece;
-  border-radius: 15px;
+  border-radius: 10px;
   margin: 1rem;
   border: solid 3px black;
   width: 90%;
+  box-shadow: 2px 2px 1px #333;
+  font-weight: bold;
+}
+
+input::-webkit-calendar-picker-indicator {
+  opacity: 100;
+  cursor: pointer;
 }
 
 .navigation {
@@ -167,11 +181,14 @@ form button {
   border-radius: 15px;
   border: solid 3px black;
   cursor: pointer;
-  font-weight: bold;
+  font-weight: 800;
 }
 
 #title {
   margin-top: 20px;
-  margin-right: 24px;
+  margin-right: 29px;
   width: 160px;
+}
+tr {
+  font-weight: 500;
 }
