--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-image: url("assets/grass.jpg");
+  background-image: url("assets/grass.webp");
   background-repeat: repeat;
   color: #000000;
 }
@@ -57,7 +57,7 @@ header {
   border-radius: 15px;
   margin: 1rem;
   background-color: #2c2c2c;
-  background-image: url("assets/holo4.jpg");
+  background-image: url("assets/holo4.webp");
   background-size: 1600px;
   box-shadow: 2px 2px 1px #333;
   animation: wave 55s linear infinite alternate;
@@ -146,7 +146,7 @@ input::-webkit-calendar-picker-indicator {
   appearance: none;
   height: var(--volIconHeight);
   width: var(--volIconWidth);
-  background: url("assets/unmute.png");
+  background: url("assets/unmute.webp");
   background-repeat: no-repeat;
   background-size: var(--volIconWidth) var(--volIconHeight);
   cursor: pointer;
@@ -159,7 +159,7 @@ input::-webkit-calendar-picker-indicator {
   appearance: none;
   height: var(--volIconHeight);
   width: var(--volIconWidth);
-  background: url("assets/mute.png");
+  background: url("assets/mute.webp");
   background-repeat: no-repeat;
   background-size: var(--volIconWidth) var(--volIconHeight);
   cursor: pointer;
