Testing mobile input focus set a false.

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ header {
 }
 
 .app {
-  background-color: #bb2944;
+  background-color: #541494;
   font-size: calc(1px + 2vmin);
   border: 10px solid black;
   border-radius: 15px;
