--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,10 @@ header {
 }
 
 .app {
-  background-color: #bb2944;
+  /* background-color: #bb2944; */
+  background-image: url("assets/brushedRed.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
   font-size: calc(1px + 2vmin);
   border: 10px solid black;
   border-radius: 15px;
@@ -42,14 +45,16 @@ header {
 }
 
 .character {
-  background-color: #f6e9d9;
+  /* background-color: #f6e9d9; */
+  background-image: url("assets/brushedCream.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 1rem;
   border: 5px solid black;
   display: flex;
   flex-direction: column;
   border-radius: 15px;
-  box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
-  box-shadow: 2px 2px 1px #333;
+  box-shadow: 2px 2px 1px #202020;
 }
 
 .character-pic {
@@ -57,9 +62,9 @@ header {
   border-radius: 15px;
   margin: 1rem;
   background-color: #2c2c2c;
-  background-image: url("assets/holo4.webp");
+  background-image: url("assets/holo.webp");
   background-size: 2400px;
-  box-shadow: 2px 2px 1px #333;
+  box-shadow: 2px 2px 1px #202020;
   animation: wave 55s linear infinite alternate;
 }
 
@@ -77,13 +82,17 @@ header {
 }
 
 #character-data-table {
+  /* background-color: #cecece; */
+  background-image: url("assets/brushedGray.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
   border: 5px solid #000000;
   border-radius: 15px;
   margin: 1rem;
   padding: 0.35rem;
-  background-color: #cecece;
+
   margin-top: 0px;
-  box-shadow: 2px 2px 1px #333;
+  box-shadow: 2px 2px 1px #202020;
   width: 100%;
 }
 
@@ -100,23 +109,26 @@ header {
 }
 
 .light {
+  background-color: #0e55a6;
   height: 1.5em;
   width: 1.5em;
   border-radius: 50%;
-  background-color: #0e55a6;
   border: 3px solid white;
-  box-shadow: 5px 2px 1px #333;
+  box-shadow: 5px 2px 1px #202020;
   margin-top: 25px;
   margin-left: 25px;
 }
 
 .input {
-  background-color: #f6e9d9;
+  /* background-color: #f6e9d9; */
+  background-image: url("assets/brushedCream.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 1rem;
   border: 5px solid black;
   border-radius: 15px;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
-  box-shadow: 2px 2px 1px #333;
+  box-shadow: 2px 2px 1px #202020;
 }
 
 .input input {
@@ -125,7 +137,7 @@ header {
   margin: 1rem;
   border: solid 3px black;
   width: 90%;
-  box-shadow: 2px 2px 1px #333;
+  box-shadow: 2px 2px 1px #202020;
   font-weight: bold;
   width: 60%;
 }
@@ -184,8 +196,12 @@ form {
 }
 
 form button {
+  /* background-color: #efcc2e; */
+  background-image: url("assets/brushedYellow.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 10px;
-  background-color: #efcc2e;
+
   border-radius: 15px;
   border: solid 3px black;
   cursor: pointer;
@@ -204,4 +220,6 @@ tr {
 
 #GO {
   color: rgb(8, 8, 8);
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 1px #202020;
 }
